# qwen-omni-inference-rs

./: .gitignore  AUTONOMOUS_SESSION_REPORT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OPUS_REVIEW_FIXES_SUMMARY.md  README.md  ROPE_FIX_SUMMARY.md  VALIDATION_RESULTS.md
beads/: README.md  phase1-gpu-acceleration.md
docs/: reference-data-format.md  t21-implementation-summary.md
lluda-inference/: BENCHMARK_RESULTS.md  Cargo.toml  GPU_DESIGN_PRINCIPLES.md  GPU_QUICK_REFERENCE.md  GPU_REFACTORING_SUMMARY.md  GPU_ROOT_CAUSE_ANALYSIS.md  PROFILING_ANALYSIS.md  run_benchmark_comparison.sh
lluda-inference/examples/: README.md  benchmark_gemv.rs  benchmark_inference.rs  benchmark_inference_profile.rs  test_strict_gpu.rs  validate.rs  validate_gemv.rs
lluda-inference/src/: attention.rs  audio_attention.rs  audio_encoder.rs  audio_encoder_layer.rs  audio_mlp.rs  audio_preprocess.rs  bf16.rs  causal_mask.rs  config.rs  conv1d.rs  embedding.rs  error.rs  generate.rs  layer_norm.rs  lib.rs  loader.rs  mlp.rs  model.rs  omni_attention.rs  omni_model.rs  quant.rs  rms_norm.rs  rope.rs  talker.rs  tensor.rs  tokenizer.rs  transformer.rs
lluda-inference/src/gpu/: buffer.rs  gemm.rs  gemv.rs  mod.rs
lluda-inference/src/gpu/shaders/: gemm.wgsl  gemv.wgsl
lluda-inference/tests/: README.md  audio_encoder_diagnostic.rs  mel_spectrogram_validation.rs  omni_asr_pipeline_validation.rs  omni_audio_validation.rs  omni_talker_validation.rs  omni_thinker_validation.rs  omni_tts_pipeline_validation.rs  omni_validation.rs  q8_quality.rs  validation.rs
logs/: ledger-2026-01-24.md  (+1 more)
(+19 files in other folders)
