[package]
name = "lluda-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust inference for Qwen Omni multimodal models"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20"
safetensors = "0.4"
memmap2 = "0.9"

# GPU acceleration (optional)
wgpu = { version = "28.0", optional = true }
pollster = { version = "0.3", optional = true }

[features]
gpu = ["wgpu", "pollster"]

[dev-dependencies]
ndarray = "0.16"
ndarray-npy = "0.9"
approx = "0.5"
